--- a/template/config.json
+++ b/template/config.json
@@ -6,7 +6,7 @@
       "password": "",
       "timeout": 300,
       "method": "aes-256-gcm",
-      "plugin": "/usr/bin/v2ray-plugin",
+      "plugin": "/bin/v2ray-plugin",
       "plugin_opts": "server",
       "plugin_args": [],
       "plugin_mode": "tcp_and_udp"
@@ -17,7 +17,7 @@
       "password": "",
       "timeout": 300,
       "method": "aes-256-gcm",
-      "plugin": "/usr/bin/v2ray-plugin",
+      "plugin": "/bin/v2ray-plugin",
       "plugin_opts": "server",
       "plugin_args": [],
       "plugin_mode": "tcp_and_udp"
