--- a/template/shadowsocks.service
+++ b/template/shadowsocks.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=shadowsocks
 Group=shadowsocks
-ExecStart=/bin/ssservice -c /etc/shadowsocks/config.json
+ExecStart=/bin/ssservice server -c /etc/shadowsocks/config.json
 Restart=on-failure
 
 [Install]
